--- a/package.json
+++ b/package.json
@@ -1,67 +1,67 @@
 {
-  "name": "express-ts-rest-api",
-  "version": "1.0.0",
-  "description": "express-ts-rest-api API",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:detectOpen":"jest --detectOpenHandles",
-    "start": "ts-node-dev src/index.ts",
-    "dev": "ts-node-dev src/index.ts",
-    "build": "tsc -p tsconfig.build.json"
-  },
-  "author": "mirza-bicer",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.20.0",
-    "compression": "^1.7.4",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "danfojs-node": "^1.1.2",
-    "dayjs": "^1.11.5",
-    "dotenv": "^16.0.0",
-    "envalid": "^7.3.1",
-    "express": "^4.18.1",
-    "express-mongo-sanitize": "^2.2.0",
-    "helmet": "^5.0.2",
-    "hpp": "^0.2.3",
-    "joi": "^17.6.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.1",
-    "morgan": "^1.10.0",
-    "passport": "^0.6.0"
-  },
-  "devDependencies": {
-    "@typegoose/typegoose": "^9.8.1",
-    "@types/bcrypt": "^5.0.0",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/compression": "^1.7.2",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/hpp": "^0.2.2",
-    "@types/jest": "^27.5.1",
-    "@types/jsonwebtoken": "^8.5.9",
-    "@types/morgan": "^1.9.3",
-    "@types/node": "^17.0.30",
-    "@types/passport": "^1.0.11",
-    "@types/supertest": "^2.0.12",
-    "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "@typescript-eslint/parser": "^5.21.0",
-    "bcryptjs": "^2.4.3",
-    "eslint": "^8.14.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "http-status": "^1.5.1",
-    "jest": "^28.1.0",
-    "prettier": "^2.6.2",
-    "redis": "^4.3.1",
-    "supertest": "^6.2.3",
-    "ts-jest": "^28.0.2",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.4"
-  }
+    "name": "programming-project-api",
+    "version": "1.0.0",
+    "description": "programming-project-api API",
+    "main": "index.js",
+    "scripts": {
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage",
+        "test:detectOpen": "jest --detectOpenHandles",
+        "start": "ts-node-dev src/index.ts",
+        "dev": "ts-node-dev src/index.ts",
+        "build": "tsc -p tsconfig.build.json"
+    },
+    "author": "mirza-bicer",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.20.0",
+        "compression": "^1.7.4",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
+        "danfojs-node": "^1.1.2",
+        "dayjs": "^1.11.5",
+        "dotenv": "^16.0.0",
+        "envalid": "^7.3.1",
+        "express": "^4.18.1",
+        "express-mongo-sanitize": "^2.2.0",
+        "helmet": "^5.0.2",
+        "hpp": "^0.2.3",
+        "joi": "^17.6.0",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^6.3.1",
+        "morgan": "^1.10.0",
+        "passport": "^0.6.0"
+    },
+    "devDependencies": {
+        "@typegoose/typegoose": "^9.8.1",
+        "@types/bcrypt": "^5.0.0",
+        "@types/bcryptjs": "^2.4.2",
+        "@types/compression": "^1.7.2",
+        "@types/cookie-parser": "^1.4.3",
+        "@types/cors": "^2.8.12",
+        "@types/express": "^4.17.13",
+        "@types/hpp": "^0.2.2",
+        "@types/jest": "^27.5.1",
+        "@types/jsonwebtoken": "^8.5.9",
+        "@types/morgan": "^1.9.3",
+        "@types/node": "^17.0.30",
+        "@types/passport": "^1.0.11",
+        "@types/supertest": "^2.0.12",
+        "@types/uuid": "^8.3.4",
+        "@typescript-eslint/eslint-plugin": "^5.21.0",
+        "@typescript-eslint/parser": "^5.21.0",
+        "bcryptjs": "^2.4.3",
+        "eslint": "^8.14.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "http-status": "^1.5.1",
+        "jest": "^28.1.0",
+        "prettier": "^2.6.2",
+        "redis": "^4.3.1",
+        "supertest": "^6.2.3",
+        "ts-jest": "^28.0.2",
+        "ts-node-dev": "^1.1.8",
+        "typescript": "^4.6.4"
+    }
 }
