--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.3.1",
         "morgan": "^1.10.0",
-        "passport": "^0.6.0"
+        "passport": "^0.6.0",
+        "passport-jwt": "^4.0.1"
     },
     "devDependencies": {
         "@typegoose/typegoose": "^9.8.1",
@@ -47,6 +48,7 @@
         "@types/morgan": "^1.9.3",
         "@types/node": "^17.0.30",
         "@types/passport": "^1.0.11",
+        "@types/passport-jwt": "^4.0.0",
         "@types/supertest": "^2.0.12",
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.21.0",
